--- a/index.html
+++ b/index.html
@@ -3,30 +3,31 @@
 
 <head>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
-    integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    <title>DEGO NFTs AIRDROP</title>
+        integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <title>DEGO NFTs</title>
     <style>
         .zsx {
-			background-color: #228be6;
-		}
+            background-color: #228be6;
+        }
 
-		.zsx h3 {
-			text-align: center;
-			color: #fff;
-		}
+        .zsx h3 {
+            text-align: center;
+            color: #fff;
+        }
 
 
-		.zsx h3 {
-			font-size: 50px;
-			font-weight: bold;
-			font-family: 'Buenard', serif;
-			text-transform: inherit;
+        .zsx h3 {
+            font-size: 50px;
+            font-weight: bold;
+            font-family: 'Buenard', serif;
+            text-transform: inherit;
 
-			margin: 0px auto 0px;
-			text-shadow: 2px 2px 2px #000;
-			-webkit-text-shadow: 2px 2px 2px #000;
-			-moz-text-shadow: 2px 2px 2px #000;
-		}
+            margin: 0px auto 0px;
+            text-shadow: 2px 2px 2px #000;
+            -webkit-text-shadow: 2px 2px 2px #000;
+            -moz-text-shadow: 2px 2px 2px #000;
+        }
+
         #our-stats .h1 {
             color: #007b5e !important;
         }
@@ -71,24 +72,50 @@
         <div class="row zsx">
             <div class="col-lg-12 animated lightSpeedIn">
                 <p class="vcenter">
-                    <h3> DEGO NFTs AIRDROP <i class="fas fa-plane-arrival"></i></h3>
+                <h3> DEGO NFTs </h3>
                 </p>
             </div>
         </div>
-        <br/>
-        <div name='summary' id='summary'></div>
-        <div class="row my-3">
-            <div class="col">
-                <div class="card">
-                    <div class="card-body">
-                       
-                        <canvas id="nft"></canvas>
-                      
+        <br />
+        <ul class=" nav nav-tabs justify-content-center" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+                <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
+                    aria-selected="true">Airdrops <i class="fas fa-plane-arrival"></i></a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a class="nav-link" id="pools-tab" data-toggle="tab" href="#pools" role="tab" aria-controls="pools"
+                    aria-selected="false">Mining Pools <i class="fas fa-water"></i> </a>
+            </li>
+
+        </ul>
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                <div name='summary' id='summary'></div>
+                <div class="row my-3">
+                    <div class="col">
+                        <div class="card">
+                            <div class="card-body">
+                                <canvas id="nft"></canvas>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <div name='stats' id='stats'></div>
+            </div>
+            <div class="tab-pane fade" id="pools" role="tabpanel" aria-labelledby="pools-tab">
+                <div id="pools"></div>
+
+
             </div>
         </div>
-        <div name='stats' id='stats'></div>
+        <hr>
+		<p class="text-center">
+            Brought to you by @ericet. <br>
+            @ericet is not part of DEGO dev team, use at your own risk.
+            <br/>
+			Open source <a href="https://github.com/ericet/dego">on GitHub</a>.
+		</p>
+
     </div>
 
     <!-- Optional JavaScript -->
@@ -105,6 +132,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.7.3/dist/Chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@0.7.0"></script>
+    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
     <script src='js/app.js'></script>
 
 </body>
