NFT airdrops ended

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         </ul>
         <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                <center><h1 style="color: red";>NFT Airdrops Ended</h1></center>
                 <div name='summary' id='summary'></div>
                 <div class="row my-3">
                     <div class="col">
