--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
                 <a class="nav-link" id="pools-tab" data-toggle="tab" href="#pools" role="tab" aria-controls="pools"
                     aria-selected="false">Mining Pools <i class="fas fa-water"></i> </a>
             </li>
+            <li class="nav-item" role="presentation">
+                <a class="nav-link" id="donation-tab" data-toggle="tab" href="#donation" role="tab" aria-controls="donation"
+                    aria-selected="false">Donation <i class="fas fa-donate"></i>
+                </a>
+            </li>
 
         </ul>
         <div class="tab-content" id="myTabContent">
@@ -108,12 +113,20 @@
 
 
             </div>
+            <div class="tab-pane fade" id="donation" role="tabpanel" aria-labelledby="donation-tab">
+               <h1>Donation</h1>
+                <h5>This site is free to use. 
+                    If you like what I'm doing and want to support me, you are welcome to donate any amount to the following addresses:</h5>
+                <ul>
+                    <li><i class="fab fa-btc"></i> BTC: 35L6JrAdFU3UDfhexTYZRg2uxmPohQPxYv</li>
+                    <li><i class="fab fa-ethereum"></i> ETH: 0x434DCffCF7dABd48B284860C27ebd184C91341F5</li>
+                    
+                  </ul>
+            </div>
         </div>
         <hr>
 		<p class="text-center">
             Brought to you by @ericet. <br>
-            @ericet is not part of DEGO dev team, use at your own risk.
-            <br/>
 			Open source <a href="https://github.com/ericet/dego">on GitHub</a>.
 		</p>
 
