added estimated mining payout

--- a/index.html
+++ b/index.html
@@ -109,7 +109,30 @@
                 <div name='stats' id='stats'></div>
             </div>
             <div class="tab-pane fade" id="pools" role="tabpanel" aria-labelledby="pools-tab">
-                <div id="pools"></div>
+                <div class="row justify-content-center">
+                    <div class="col-12 col-md-10 col-lg-8">
+                        <form class="card card-sm" id="calculate">
+                            <div class="card-body row no-gutters align-items-center">
+                                <div class="col-auto">
+                                    <i class="fas fa-search h4 text-body"></i>
+                                </div>
+                                <!--end of col-->
+                                <div class="col">
+                                    <input class="form-control form-control-lg form-control-borderless" type="number" placeholder="Enter your GEGO ID" id="gegoid">
+                                </div>
+                                <!--end of col-->
+                                <div class="col-auto">
+                                    <button class="btn btn-lg btn-success" type="submit">Estimate Payout</button>
+                                </div>
+                                <!--end of col-->
+                            </div>
+                        </form>
+                       
+
+                    </div>
+                    <!--end of col-->
+                </div>
+                <div id="poolsDisplay"></div>
 
 
             </div>
