added ETH wallet option

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                 </div>
                                 <!--end of col-->
                                 <div class="col">
-                                    <input class="form-control form-control-lg form-control-borderless" type="number" placeholder="Enter your GEGO ID" id="gegoid">
+                                    <input class="form-control form-control-lg form-control-borderless" type="search" placeholder="Enter your GEGO ID or ETH address" id="gegoid">
                                 </div>
                                 <!--end of col-->
                                 <div class="col-auto">
