--- a/index.html
+++ b/index.html
@@ -80,7 +80,11 @@
         <ul class=" nav nav-tabs justify-content-center" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
                 <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
-                    aria-selected="true">Airdrops <i class="fas fa-plane-arrival"></i></a>
+                    aria-selected="true">BSC Airdrops <i class="fas fa-plane-arrival"></i></a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a class="nav-link" id="eth-tab" data-toggle="tab" href="#eth" role="tab" aria-controls="eth"
+                    aria-selected="false">ETH Airdrops <i class="fas fa-plane-arrival"></i></a>
             </li>
             <li class="nav-item" role="presentation">
                 <a class="nav-link" id="pools-tab" data-toggle="tab" href="#pools" role="tab" aria-controls="pools"
@@ -95,6 +99,19 @@
         </ul>
         <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                <div name='bscSummary' id='bscSummary'></div>
+                <div class="row my-3">
+                    <div class="col">
+                        <div class="card">
+                            <div class="card-body">
+                                <canvas id="nft-bsc"></canvas>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div name='stats-bsc' id='stats-bsc'></div>
+            </div>
+            <div class="tab-pane fade" id="eth" role="tabpanel" aria-labelledby="eth-tab">
                 <center><h1 style="color: red";>NFT Airdrops Ended</h1></center>
                 <div name='summary' id='summary'></div>
                 <div class="row my-3">
