added google analytics

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                     aria-selected="false">Mining Pools <i class="fas fa-water"></i> </a>
             </li>
             <li class="nav-item" role="presentation">
-                <a class="nav-link" id="donation-tab" data-toggle="tab" href="#donation" role="tab" aria-controls="donation"
-                    aria-selected="false">Donation <i class="fas fa-donate"></i>
+                <a class="nav-link" id="donation-tab" data-toggle="tab" href="#donation" role="tab"
+                    aria-controls="donation" aria-selected="false">Donation <i class="fas fa-donate"></i>
                 </a>
             </li>
 
@@ -112,7 +112,9 @@
                 <div name='stats-bsc' id='stats-bsc'></div>
             </div>
             <div class="tab-pane fade" id="eth" role="tabpanel" aria-labelledby="eth-tab">
-                <center><h1 style="color: red";>NFT Airdrops Ended</h1></center>
+                <center>
+                    <h1 style="color: red" ;>NFT Airdrops Ended</h1>
+                </center>
                 <div name='summary' id='summary'></div>
                 <div class="row my-3">
                     <div class="col">
@@ -135,7 +137,8 @@
                                 </div>
                                 <!--end of col-->
                                 <div class="col">
-                                    <input class="form-control form-control-lg form-control-borderless" type="search" placeholder="Enter your GEGO ID or ETH address" id="gegoid">
+                                    <input class="form-control form-control-lg form-control-borderless" type="search"
+                                        placeholder="Enter your GEGO ID or ETH address" id="gegoid">
                                 </div>
                                 <!--end of col-->
                                 <div class="col-auto">
@@ -144,7 +147,7 @@
                                 <!--end of col-->
                             </div>
                         </form>
-                       
+
 
                     </div>
                     <!--end of col-->
@@ -154,24 +157,33 @@
 
             </div>
             <div class="tab-pane fade" id="donation" role="tabpanel" aria-labelledby="donation-tab">
-               <h1>Donation</h1>
-                <h5>This site is free to use. 
-                    If you like what I'm doing and want to support me, you are welcome to donate any amount to the following addresses:</h5>
+                <h1>Donation</h1>
+                <h5>This site is free to use.
+                    If you like what I'm doing and want to support me, you are welcome to donate any amount to the
+                    following addresses:</h5>
                 <ul>
                     <li><i class="fab fa-btc"></i> BTC: 35L6JrAdFU3UDfhexTYZRg2uxmPohQPxYv</li>
                     <li><i class="fab fa-ethereum"></i> ETH: 0x434DCffCF7dABd48B284860C27ebd184C91341F5</li>
-                    
-                  </ul>
+
+                </ul>
             </div>
         </div>
         <hr>
-		<p class="text-center">
+        <p class="text-center">
             Brought to you by @ericet. <br>
-			Open source <a href="https://github.com/ericet/dego">on GitHub</a>.
-		</p>
+            Open source <a href="https://github.com/ericet/dego">on GitHub</a>.
+        </p>
 
     </div>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180898517-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
+        gtag('config', 'UA-180898517-1');
+    </script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
