added dego donation address

--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
                     If you like what I'm doing and want to support me, you are welcome to donate any amount to the
                     following addresses:</h5>
                 <ul>
+                    <li><i class="fab fa-ethereum"></i> DEGO: 0x434DCffCF7dABd48B284860C27ebd184C91341F5</li>
                     <li><i class="fab fa-btc"></i> BTC: 35L6JrAdFU3UDfhexTYZRg2uxmPohQPxYv</li>
                     <li><i class="fab fa-ethereum"></i> ETH: 0x434DCffCF7dABd48B284860C27ebd184C91341F5</li>
 
