added last casting nft

--- a/index.html
+++ b/index.html
@@ -57,6 +57,27 @@
             font-style: italic;
             margin-bottom: 0;
         }
+
+        .navigation-box {
+            top: 0.4rem;
+            right: 0.8rem;
+            width: 2rem;
+            position: absolute;
+        }
+
+        @media (min-width: 768px) {
+            .breaking-caret:after {
+                content: "";
+                width: 0;
+                height: 0;
+                border-top: 20px solid transparent;
+                border-left: 15px solid #007bff;
+                border-bottom: 20px solid transparent;
+                position: absolute;
+                right: -15px;
+                top: 0;
+            }
+        }
     </style>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -113,6 +134,51 @@
         </ul>
         <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                <br/>
+                <!--start code-->
+                <div class="row mb-5">
+                    <div class="col-12 py-4 bg-dark">
+                        <div class="row">
+                           
+                            <!--Breaking box-->
+                            <div class="col-md-3 col-lg-2 pr-md-0">
+                                <div class="p-2 bg-primary text-white text-center breaking-caret">
+                                    <span class="font-weight-bold">Last Casting NFT</span>
+                                </div>
+                            </div>
+                            <!--end breaking box-->
+                            <!--Breaking content-->
+                            <div class="col-md-9 col-lg-10 pl-md-4 py-2">
+                                <div class="breaking-box">
+                                    <div id="carouselbreaking" class="carousel slide" data-ride="carousel">
+                                        <div class="carousel-inner" id="latestBot">
+                                        </div>
+                                        <!--end breaking news-->
+
+                                        <!--navigation slider-->
+                                        <div class="navigation-box p-2 d-none d-sm-block">
+                                            <!--nav left-->
+                                            <a class="carousel-control-prev text-primary" href="#carouselbreaking"
+                                                role="button" data-slide="prev">
+                                                <i class="fa fa-angle-left" aria-hidden="true"></i>
+                                                <span class="sr-only">Previous</span>
+                                            </a>
+                                            <!--nav right-->
+                                            <a class="carousel-control-next text-primary" href="#carouselbreaking"
+                                                role="button" data-slide="next">
+                                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                                <span class="sr-only">Next</span>
+                                            </a>
+                                        </div>
+                                        <!--end navigation slider-->
+                                    </div>
+                                </div>
+                            </div>
+                            <!--end breaking content-->
+                        </div>
+                    </div>
+                </div>
+                <!--end code-->
                 <div name='botSummary' id='botSummary'></div>
                 <div class="row my-3">
                     <div class="col">
@@ -278,7 +344,7 @@
     </script>
 
     <script src='js/app.js'></script>
-   
+
 </body>
 
 </html>
